innesti code review

--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
     },
     "keywords": [],
     "author": "",
-    "license": "ISC"
+    "license": "ISC",
+    "devDependencies": {
+        "@soluzioni-futura/eslint-config-soluzioni-futura": "^1.4.0",
+        "@typescript-eslint/eslint-plugin": "^4.32.0",
+        "@typescript-eslint/parser": "^4.32.0",
+        "eslint": "^7.32.0"
+    }
 }
