--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "dependencies": {
         "aws-sdk": "^2.991.0",
         "currency-converter-lt": "^1.1.4",
+        "dotenv": "^10.0.0",
         "node-fetch": "^2.6.5",
-        "stripe": "^8.176.0"
+        "stripe": "^8.176.0",
+        "xml2js": "^0.4.23"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
